adiciona opções de música ao html

--- a/lacos.html
+++ b/lacos.html
@@ -22,6 +22,9 @@
             <option>New Age</option>
             <option>Classico</option>
             <option>Ópera</option>
+            <option>Hip Hop</option>
+            <option>Pagode</option>
+            <option>Samba</option>
             
           </select>
         </p>
