adiciona informações ao html

--- a/lacos.html
+++ b/lacos.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <form name="selectForm">
+      <H1>Contador de Músicas</H1>
         <p>
           <label for="tipoMusica"
             >Escolha alguns tipos de música, em seguida, clique no botão
